--- a/public/style.css
+++ b/public/style.css
@@ -99,6 +99,11 @@ canvas#piechart_gradescience {
     #roster {
         width: 95vw;
     }
+
+    .modal-dialog {
+        max-width: 90%;
+        margin: 1.75rem auto;
+    }
 }
 
 section {
@@ -224,6 +229,10 @@ a.img-btn {
 
 #logout {
     display: inline;
+}
+
+.rich-text-editor {
+    display: block;
 }
 
 footer {
