29 July 2024: -implement pagination for homepage & list_post -implement 'no data' placeholder for anything that fetches data from database -WIP: Post Announcement Module -next: migration/seeder for posts

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -77,6 +77,11 @@ img {
     height: auto;
 }
 
+img.no-record {
+    max-width: 200px;
+    height: auto;
+}
+
 .navbar {
     padding-left: 15px;
     padding-right: 15px;
@@ -89,6 +94,11 @@ img {
 .navbar-brand {
     width: 90px;
     height: auto;
+}
+
+nav[aria-label] {
+    display: flex;
+    justify-content: center;
 }
 
 .center {
