--- a/public/style.css
+++ b/public/style.css
@@ -115,6 +115,11 @@ img {
     height: auto;
 }
 
+img.no-record {
+    max-width: 200px;
+    height: auto;
+}
+
 .navbar {
     padding-left: 15px;
     padding-right: 15px;
@@ -127,6 +132,11 @@ img {
 .navbar-brand {
     width: 90px;
     height: auto;
+}
+
+nav[aria-label] {
+    display: flex;
+    justify-content: center;
 }
 
 .center {
