4 August 2024: -setup feedback deleteAll & viewSingle -WIP: single feedback delete -next: single feedback delete

--- a/resources/css/feedback.css
+++ b/resources/css/feedback.css
@@ -41,3 +41,16 @@
 .message-body {
     padding: 1rem;
 }
+
+div.feedback {
+    margin: auto;
+    width: 90%;
+}
+
+.feedback-action {
+    text-align: center;
+
+    button {
+        width: 100px;
+    }
+}
