--- a/public/style.css
+++ b/public/style.css
@@ -80,6 +80,19 @@
     padding: 1rem;
 }
 
+div.feedback {
+    margin: auto;
+    width: 90%;
+}
+
+.feedback-action {
+    text-align: center;
+
+    button {
+        width: 100px;
+    }
+}
+
 canvas {
     width: 100%;
     /* default graph size, custom size to be added */
