5 August 2024: -setup feedback deleteSingle, markAllAsRead -feedback now has read & unread indicator -WIP: markAllAsUnread -next: select multiple to delete/read/unread

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -74,7 +74,9 @@ th {
 
 button.crud {
     float: right;
-    width: 100px;
+    width: auto;
+    min-width: 100px;
+    margin-left: 20px;
 }
 
 #form-container {
