--- a/public/style.css
+++ b/public/style.css
@@ -93,6 +93,11 @@ div.feedback {
     }
 }
 
+.unread {
+    font-weight: bold;
+    background-color: lightyellow;
+}
+
 canvas {
     width: 100%;
     /* default graph size, custom size to be added */
@@ -198,7 +203,9 @@ th {
 
 button.crud {
     float: right;
-    width: 100px;
+    width: auto;
+    min-width: 100px;
+    margin-left: 20px;
 }
 
 #form-container {
