--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,3 +1,7 @@
+.btn-warning {
+    color: black; /* improve contrast */
+}
+
 #tablet, #mobile {
     display: none;
 }
@@ -151,6 +155,10 @@ table#feedback {
         white-space: nowrap;
     }
 
+    col#select {
+        width: 34px;
+    }
+
     col#date {
         width: 15%;
     }
@@ -167,6 +175,15 @@ table#feedback {
 
     col#action {
         width: 51px;
+    }
+}
+
+.feedback-list-action {
+    display: flex;
+    justify-content: flex-end;
+
+    button {
+        margin: 0 10px;
     }
 }
 
@@ -210,6 +227,12 @@ body.form {
         /* to fix some misaligned text */
         padding: 10px;
     }
+
+    table#feedback {
+        col#date {
+            width: 16%;
+        }
+    }
 }
 
 /* This condition activates when preview screen is shorter than given max width. */
@@ -247,20 +270,24 @@ body.form {
     }
 
     table#feedback {
-        th:nth-child(2), td:nth-child(2), th:nth-child(4), td:nth-child(4) {
+        th:nth-child(3), td:nth-child(3), th:nth-child(5), td:nth-child(5) {
             display: none;
+        }
+
+        col#select {
+            width: 5%;
+        }
+
+        col#date {
+            width: 16%;
         }
 
         col#name {
             display: none;
         }
 
-        col#date {
-            width: 13%;
-        }
-
         col#action {
-            width: 6%;
+            width: 7%;
         }
     }
 
@@ -279,5 +306,13 @@ body.form {
     .modal-dialog {
         max-width: 90%;
         margin: 1.75rem auto;
+    }
+
+    .feedback-list-action {
+        justify-content: center;
+
+        .btn {
+            order: initial; /* Maintain initial order */
+        }
     }
 }
