10 August 2024: -integrated Tidio livechat on homepages. -integrating Tidio Lyro AI chatbot. (faq bot) ->require training, therefore setting up about.blade.php with basic info. -future-proof some codes for deployment(http to https). -WIP: Chatbot Module (lyro AI faq bot) -next: extra modules, fix/improve current modules

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -44,6 +44,10 @@ nav[aria-label] {
     width: 45%;
 }
 
+.about {
+    text-align: justify;
+}
+
 table#post {
     width: 100%;
     table-layout: fixed;
