--- a/public/style.css
+++ b/public/style.css
@@ -175,6 +175,10 @@ nav[aria-label] {
     width: 45%;
 }
 
+.about {
+    text-align: justify;
+}
+
 table#post {
     width: 100%;
     table-layout: fixed;
