15 August 2024: -post announcement module improvement: 1. support multiple images/post 2. support .gif format 3. rejects non-image files 4. revamp "clear-img" to a button where user can select multiple img to delete 4.5uploading new img will no longer delete old img by default 5. image slider for posts with 1+ images -minor fix on exam analysis, ensure no-data placeholder works properly. -WIP: fix/improve current modules -current: accept video embeds

--- a/public/style.css
+++ b/public/style.css
@@ -175,6 +175,18 @@ nav[aria-label] {
     width: 45%;
 }
 
+.slick-carousel {
+    max-width: 600px;
+}
+
+.slick-arrow, .slick-arrow:hover, .slick-arrow:focus {
+    background-color: cornflowerblue;
+}
+
+.slick-slide img {
+    margin: auto;
+}
+
 .about {
     text-align: justify;
 }
@@ -229,6 +241,16 @@ button.crud {
     align-items: center;
     width: fit-content;
     text-align: right;
+}
+
+#editpost-form {
+    .btn {
+        min-width: 110px;
+    }
+}
+
+.no-padding {
+    padding-left: 0;
 }
 
 .login-field {
@@ -383,7 +405,11 @@ body.form {
 
     .center {
         margin: auto;
-        width: 100%;
+        width: 97%;
+    }
+
+    .slick-slide {
+        padding: 0 1px;
     }
 
     button.mobile {
