16 August 2024: -exam analysis module fix: 1. populate the rest of the charts. (grade distribution for remaining subjects) 2. split js script in analysis.blade.php into separate file. -WIP: fix/improve current modules -current: accept video embeds

--- a/public/style.css
+++ b/public/style.css
@@ -106,6 +106,12 @@ canvas {
     max-width: 310px;
 }
 
+canvas.piechart {
+    margin: auto;
+    max-width: 162px;
+    min-width: 162px;
+}
+
 .card {
     padding: 15px;
 }
@@ -116,11 +122,6 @@ canvas {
     h6 {
         text-align: center;
     }
-}
-
-canvas#piechart_gradescience {
-    margin: auto;
-    max-width: 162px;
 }
 
 #table-graph {
