30 August 2024: -lock translation for database-fetched values. -add & edit roster forms now will display standard invalidation messages. -WIP: fix/improve current modules -next: role access

--- a/public/style.css
+++ b/public/style.css
@@ -301,6 +301,21 @@ div#forgot{
     }
 }
 
+.roster-form {
+    max-height: 100vh;
+    overflow-y: auto;
+
+    .sticky {
+        position: sticky;
+        top: 0;
+        background-color: white;
+    }
+
+    .btn {
+        min-width: 100px;
+    }
+}
+
 .img-btn img {
     max-width: 30px;
     height: auto;
