3 September 2024: -setup simple profile page to separate role access. -setup single-session-login feature, where subsequent logins are locked to a single page. -WIP: fix/improve current modules -next: youtube embed

--- a/public/style.css
+++ b/public/style.css
@@ -215,6 +215,10 @@ nav[aria-label] {
     width: 45%;
 }
 
+.center.text {
+    text-align: center;
+}
+
 .slick-carousel {
     max-width: 600px;
 }
