4 September 2024: -improvement (post announcement module) |->now accepting video embeds(YouTube, Google Drive) -[COMPLETE]fix/improve current modules -next: new modules/improve current modules

--- a/public/style.css
+++ b/public/style.css
@@ -191,6 +191,11 @@ img.no-record {
     height: auto;
 }
 
+iframe {
+    width: 100%;
+    height: calc(100vh * 9 / 16); /*to ensure 16:9 ratio*/
+}
+
 .navbar {
     padding-left: 15px;
     padding-right: 15px;
