19 October 2024: -Introduced new exam subject: History, setting all CRUD to reflect the change. -Change website background color. -next: integrate chart dropdown filters. -WIP: exam analysis module -next: facebook api for creating posts

--- a/public/style.css
+++ b/public/style.css
@@ -201,9 +201,9 @@ iframe {
     padding-right: 15px;
 }
 
-.navbar.bg-custom {
+/* .navbar.bg-custom {
     background-color: #D9D9D9;
-}
+} */
 
 .navbar-brand {
     width: 90px;
@@ -400,6 +400,36 @@ body {
 body.form {
     display: block;
 }
+
+/* UI 2.0: change color only */
+body {
+    background-color: lightyellow;
+}
+
+.navbar.bg-custom {
+    background-color: tan;
+}
+
+.message-header {
+    background-color: peru;
+}
+
+table th {
+    background-color: tan;
+}
+
+div.card {
+    background-color: transparent;
+}
+
+.unread {
+    background-color: lightcyan;
+}
+
+.roster-form .sticky {
+    background-color: lightyellow;
+}
+/* UI 2.0 end here */
 
 #tablet, #mobile {
     display: none;
