1 November 2024: -included queries for tables in other option -specific student implementation put on hold, prioritise next target -WIP: exam analysis module (on hold) -next: homepage UI overhaul

--- a/public/style.css
+++ b/public/style.css
@@ -457,6 +457,10 @@ canvas.piechart {
     border-width: 1px;
 }
 
+#data-body[data-type="Standard"], #data-body[data-type="Specific Student"] {
+    display: none;
+}
+
 .btn-warning {
     color: black; /* improve contrast */
 }
