--- a/resources/css/graph.css
+++ b/resources/css/graph.css
@@ -25,3 +25,7 @@ canvas.piechart {
 #table-graph th, #table-graph td {
     border-width: 1px;
 }
+
+#data-body[data-type="Standard"], #data-body[data-type="Specific Student"] {
+    display: none;
+}
