--- a/public/style.css
+++ b/public/style.css
@@ -425,6 +425,70 @@ div.feedback {
     background-color: white;
 }
 
+.divider {
+    background-image: url('/media/pattern.png');
+    background-repeat: repeat-x;
+    background-size: contain;
+    height: 12vw;
+    width: 100%;
+    margin-top: -10%;
+    z-index: 1;
+}
+
+/* Container for the image and overlay */
+.hero-section {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+/* Style for the image */
+.hero-section img {
+    width: 100vw;
+}
+
+/* Translucent overlay with centered text */
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 55%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /*                 topL  topR  btmR       btmL*/
+    clip-path: polygon(0 0, 60% 0, 100% 100%, 0 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    color: white;
+    text-align: left;
+    padding: 0 16% 8% 2%;
+}
+
+h1.large-text.en {
+    font-size: 2.9rem;
+}
+
+p.large-text.en {
+    font-size: 1.2rem;
+}
+
+h1.large-text.ch {
+    font-size: 4rem;
+}
+
+p.large-text.ch {
+    font-size: 1.2rem;
+}
+
+.hidden {
+    display: none;
+}
+
 .roster-form .btn {
     min-width: 100px;
 }
@@ -755,6 +819,26 @@ div.card {
     table#feedback col#date {
         width: 16%;
     }
+
+    .hero-section {
+        flex-direction: column;
+    }
+
+    .overlay {
+        position: relative;
+        width: 100%;
+        height: auto;
+        clip-path: none;
+        padding: 0 3% 7%;
+    }
+
+    h1.large-text {
+        font-size: calc(1.4rem + 1.8vw) !important;
+    }
+
+    p.large-text {
+        font-size: 1rem !important;
+    }
 }
 
 /* This condition activates when preview screen is shorter than given max width. */
@@ -828,4 +912,6 @@ div.card {
     .feedback-list-action .btn {
         order: initial; /* Maintain initial order */
     }
+
+
 }
