--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -34,6 +34,26 @@
     table#feedback col#date {
         width: 16%;
     }
+
+    .hero-section {
+        flex-direction: column;
+    }
+
+    .overlay {
+        position: relative;
+        width: 100%;
+        height: auto;
+        clip-path: none;
+        padding: 0 3% 7%;
+    }
+
+    h1.large-text {
+        font-size: calc(1.4rem + 1.8vw) !important;
+    }
+
+    p.large-text {
+        font-size: 1rem !important;
+    }
 }
 
 /* This condition activates when preview screen is shorter than given max width. */
