--- a/public/style.css
+++ b/public/style.css
@@ -425,70 +425,6 @@ div.feedback {
     background-color: white;
 }
 
-.divider {
-    background-image: url('/media/pattern.png');
-    background-repeat: repeat-x;
-    background-size: contain;
-    height: 12vw;
-    width: 100%;
-    margin-top: -10%;
-    z-index: 1;
-}
-
-/* Container for the image and overlay */
-.hero-section {
-    position: relative;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-}
-
-/* Style for the image */
-.hero-section img {
-    width: 100vw;
-}
-
-/* Translucent overlay with centered text */
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 55%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    /*                 topL  topR  btmR       btmL*/
-    clip-path: polygon(0 0, 60% 0, 100% 100%, 0 100%);
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    color: white;
-    text-align: left;
-    padding: 0 16% 8% 2%;
-}
-
-h1.large-text.en {
-    font-size: 2.9rem;
-}
-
-p.large-text.en {
-    font-size: 1.2rem;
-}
-
-h1.large-text.ch {
-    font-size: 4rem;
-}
-
-p.large-text.ch {
-    font-size: 1.2rem;
-}
-
-.hidden {
-    display: none;
-}
-
 .roster-form .btn {
     min-width: 100px;
 }
@@ -753,9 +689,9 @@ body.form {
     display: block;
 }
 
-/* UI 2.0: change color only */
+/* UI 2.0: onwards */
 body {
-    background-color: lightyellow;
+    background-color: #fff4cc; /* Pastel Butter Yellow */
 }
 
 .navbar.bg-custom {
@@ -781,7 +717,119 @@ div.card {
 .roster-form .sticky {
     background-color: lightyellow;
 }
-/* UI 2.0 end here */
+
+.divider {
+    background-image: url('/media/pattern.png');
+    background-repeat: repeat-x;
+    background-size: contain;
+    height: 12vw;
+    width: 100%;
+    margin-top: -8%;
+}
+
+/* Container for the image and overlay */
+.hero-section {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+/* Style for the image */
+.hero-section img {
+    width: 100vw;
+}
+
+/* Translucent overlay with centered text */
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 55%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* trapezium      topL  topR  btmR       btmL*/
+    clip-path: polygon(0 0, 60% 0, 100% 100%, 0 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    color: white;
+    text-align: left;
+    padding: 0 16% 8% 2%;
+}
+
+h1.large-text.en {
+    font-size: 2.9rem;
+}
+
+p.large-text.en {
+    font-size: 1.2rem;
+}
+
+h1.large-text.ch {
+    font-size: 4rem;
+}
+
+p.large-text.ch {
+    font-size: 1.2rem;
+}
+
+.hidden {
+    display: none;
+}
+
+#news h1 {
+    text-align: center;
+    text-decoration: underline;
+}
+
+#news td {
+    padding: 0 1rem 0.5em 0;
+}
+
+#news a {
+    text-align: end;
+}
+
+.flex-grow {
+    flex-grow: 1; /* Allows the columns to grow and take available space */
+    margin: 0 10px;
+}
+
+.deco {
+    position: absolute;
+    width: 150px;
+    z-index: -1;
+}
+
+.left {
+    left: -90px;
+    top: 40%;
+}
+
+.middle {
+    left: -70px;
+    top: -60px;
+}
+
+/* may push out whitespace */
+.right {
+    /* right: -15px; */
+    right: -70px;
+    bottom: -60px;
+}
+
+#about h1, #about h4, #about a {
+    text-align: center;
+}
+
+.clip {
+    overflow: hidden;
+    height: 35vh;
+}
 
 #tablet, #mobile {
     display: none;
@@ -790,6 +838,18 @@ div.card {
 /* REMINDER: media query should be place at end of file, higher override priority*/
 
 /* This condition activates when preview screen is shorter than given max width. */
+/* This is for monitors to scale up space usage appropriately */
+@media screen and (min-width: 769px) {
+    section .container {
+        max-width: 85%;
+    }
+
+    #news table {
+        margin: 0 auto;
+        width: 90%;
+    }
+}
+
 /* This is exclusive for tablets */
 @media screen and (max-width: 768px) {
     #PC, #mobile {
@@ -912,6 +972,4 @@ div.card {
     .feedback-list-action .btn {
         order: initial; /* Maintain initial order */
     }
-
-
 }
