--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -228,7 +228,7 @@ body.form {
 
 /* UI 2.0: onwards */
 body {
-    background-color: lightyellow;
+    background-color: #fff4cc; /* Pastel Butter Yellow */
 }
 
 .navbar.bg-custom {
@@ -316,4 +316,54 @@ p.large-text.ch {
 
 .hidden {
     display: none;
+}
+
+#news h1 {
+    text-align: center;
+    text-decoration: underline;
+}
+
+#news td {
+    padding: 0 1rem 0.5em 0;
+}
+
+#news a {
+    text-align: end;
+}
+
+.flex-grow {
+    flex-grow: 1; /* Allows the columns to grow and take available space */
+    margin: 0 10px;
+}
+
+.deco {
+    position: absolute;
+    width: 150px;
+    z-index: -1;
+}
+
+.left {
+    left: -90px;
+    top: 40%;
+}
+
+.middle {
+    left: -70px;
+    top: -60px;
+}
+
+/* may push out whitespace */
+.right {
+    /* right: -15px; */
+    right: -70px;
+    bottom: -60px;
+}
+
+#about h1, #about h4, #about a {
+    text-align: center;
+}
+
+.clip {
+    overflow: hidden;
+    height: 35vh;
 }
