10 November 2024: -implemented dynamic update badge on feedback notif button. -WIP: msg indicator [completed] -next: FB api

--- a/public/style.css
+++ b/public/style.css
@@ -853,6 +853,10 @@ p.large-text.ch {
     overflow-wrap: break-word;
 }
 
+.badge {
+    padding: 0.6em;
+}
+
 #tablet, #mobile {
     display: none;
 }
